--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ const PIPE_WIDTH = 80;
 const PIPE_GAP = 200;
 const PIPE_SPEED = 3;
 const PIPE_FREQUENCY = 1800;
+const MAX_FALL_SPEED = 12;
+const JUMP_COOLDOWN = 300;
 
 // Game variables
 let bird;
@@ -65,6 +67,7 @@ let gameOver = false;
 let gameStarted = false;
 let lastPipeTime = 0;
 let isProcessingTransaction = false;
+let autoRestartPending = false;
 
 // Blockchain variables
 let web3;
@@ -136,7 +139,8 @@ function setup() {
     y: SCREEN_HEIGHT / 2,
     radius: BIRD_SIZE / 2,
     velocity: 0,
-    color: [255, 255, 0]
+    color: [255, 255, 0],
+    canJump: true
   };
   
   highScore = localStorage.getItem('flappyHighScore') || 0;
@@ -175,8 +179,12 @@ function draw() {
     return;
   }
   
-  bird.velocity += GRAVITY;
-  bird.y += bird.velocity;
+  // Update physics only when game is active
+  if (!isProcessingTransaction) {
+    bird.velocity += GRAVITY;
+    if (bird.velocity > MAX_FALL_SPEED) bird.velocity = MAX_FALL_SPEED;
+    bird.y += bird.velocity;
+  }
   
   fill(bird.color);
   noStroke();
@@ -218,7 +226,7 @@ function draw() {
 
 async function keyPressed() {
   if (key === ' ' && !isProcessingTransaction) {
-    if (!gameStarted) {
+    if (!gameStarted && !gameOver) {
       if (!account) {
         alert('Please connect your wallet first!');
         return;
@@ -228,19 +236,23 @@ async function keyPressed() {
       isProcessingTransaction = false;
       if (success) {
         gameStarted = true;
-        // Сброс физики при старте
         bird.y = SCREEN_HEIGHT / 2;
         bird.velocity = 0;
       }
     } else if (gameOver) {
       isProcessingTransaction = true;
+      autoRestartPending = true;
       const success = await sendGameFee();
       isProcessingTransaction = false;
-      if (success) {
+      if (success && autoRestartPending) {
         resetGame();
       }
     } else {
-      bird.velocity = LIFT; // Прыжок работает даже во время транзакции
+      if (bird.canJump) {
+        bird.velocity = LIFT;
+        bird.canJump = false;
+        setTimeout(() => bird.canJump = true, JUMP_COOLDOWN);
+      }
     }
   }
 }
@@ -277,15 +289,19 @@ class Pipe {
 
 function endGame() {
   gameOver = true;
+  autoRestartPending = false;
 }
 
 function resetGame() {
   bird.y = SCREEN_HEIGHT / 2;
-  bird.velocity = 0;
+  bird.velocity = -5;
+  bird.canJump = true;
   pipes = [];
   score = 0;
   gameOver = false;
+  gameStarted = true;
   lastPipeTime = millis();
+  autoRestartPending = false;
 }
 </script>
 </body>
