--- a/index.html
+++ b/index.html
@@ -39,11 +39,38 @@
       border-radius: 4px;
       cursor: pointer;
     }
+    #leaderboard {
+      position: absolute;
+      top: 50px;
+      right: 10px;
+      width: 200px;
+      background: rgba(0,0,0,0.7);
+      color: white;
+      padding: 10px;
+      border-radius: 5px;
+      max-height: 300px;
+      overflow-y: auto;
+    }
+    .leaderboard-title {
+      font-weight: bold;
+      margin-bottom: 5px;
+      text-align: center;
+    }
+    .leaderboard-entry {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 3px;
+      font-size: 12px;
+    }
   </style>
 </head>
 <body>
 <button id="connect-btn">Connect Wallet</button>
 <div id="wallet-info" style="display: none;"></div>
+<div id="leaderboard" style="display: none;">
+  <div class="leaderboard-title">LEADERBOARD</div>
+  <div id="leaderboard-entries"></div>
+</div>
 <script>
 // Game constants
 const SCREEN_WIDTH = 800;
@@ -75,6 +102,44 @@ let account;
 const MONAD_RPC = 'wss://monad-testnet.drpc.org';
 const GAME_FEE = '0.01';
 
+// Leaderboard
+let leaderboard = [];
+
+function updateLeaderboard() {
+  const entries = JSON.parse(localStorage.getItem('flappyLeaderboard')) || [];
+  entries.sort((a, b) => b.score - a.score);
+  leaderboard = entries.slice(0, 10); // Топ-10 игроков
+  
+  const container = document.getElementById('leaderboard-entries');
+  container.innerHTML = '';
+  
+  leaderboard.forEach((entry, index) => {
+    const entryEl = document.createElement('div');
+    entryEl.className = 'leaderboard-entry';
+    entryEl.innerHTML = `
+      <span>${index + 1}. ${entry.address.substring(0, 6)}...</span>
+      <span>${entry.score}</span>
+    `;
+    container.appendChild(entryEl);
+  });
+}
+
+function saveToLeaderboard(address, score) {
+  const entries = JSON.parse(localStorage.getItem('flappyLeaderboard')) || [];
+  const existingIndex = entries.findIndex(e => e.address === address);
+  
+  if (existingIndex >= 0) {
+    if (score > entries[existingIndex].score) {
+      entries[existingIndex].score = score;
+    }
+  } else {
+    entries.push({ address, score });
+  }
+  
+  localStorage.setItem('flappyLeaderboard', JSON.stringify(entries));
+  updateLeaderboard();
+}
+
 async function initWeb3() {
   if (window.ethereum) {
     try {
@@ -87,6 +152,9 @@ async function initWeb3() {
       const walletInfo = document.getElementById('wallet-info');
       walletInfo.style.display = 'block';
       walletInfo.textContent = `Connected: ${account.substring(0, 6)}...${account.substring(38)}`;
+      
+      document.getElementById('leaderboard').style.display = 'block';
+      updateLeaderboard();
       
       await window.ethereum.request({
         method: 'wallet_addEthereumChain',
@@ -144,6 +212,7 @@ function setup() {
   };
   
   highScore = localStorage.getItem('flappyHighScore') || 0;
+  updateLeaderboard();
 }
 
 function draw() {
@@ -179,7 +248,6 @@ function draw() {
     return;
   }
   
-  // Update physics only when game is active
   if (!isProcessingTransaction) {
     bird.velocity += GRAVITY;
     if (bird.velocity > MAX_FALL_SPEED) bird.velocity = MAX_FALL_SPEED;
@@ -288,6 +356,9 @@ class Pipe {
 }
 
 function endGame() {
+  if (account && score > 0) {
+    saveToLeaderboard(account, score);
+  }
   gameOver = true;
   autoRestartPending = false;
 }
